# squad

./: .gitignore  README.md  db_schema.sql  pyproject.toml  requirements.txt
src/api/: openai_api.py
src/models/: __init__.py  enums.py  sqlmodel_tables.py
src/squad/: main.py  role_matching.py
web/: .env.production  index.html  package-lock.json  vite.config.ts
web/src/: App.css  App.tsx  FinalScoreBar.tsx  MatchesPanel.tsx  RoleDetailPage.tsx  api.ts  index.css  main.tsx
